# Conjure

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  config.py  main.py  pyproject.toml  requirements.txt  run.py  start.bat  start.sh
.github/ISSUE_TEMPLATE/: bug_report.md  new_ability.md
.github/workflows/: tests.yml
audio/: analyzer.py  sounds.py
core/: hooks.py  state.py
docs/: DEMO.md  MANUAL.md
effects/: base.py  chidori.py  fireball.py  frost_nova.py  hud.py  kamehameha.py  laser_eyes.py  options_panel.py  projectiles.py  rasengan.py  reality_tear.py  renderer.py  space_stretch.py  time_freeze.py  time_shatter.py  utils.py
gestures/: engine.py  poses.py  router.py  router_laser.py  router_projectile.py  smoothing.py
scripts/: diagnose_video.py  download_model.py  export_manual.py  generate_sfx.py  make_demo_gif.sh  slice_manual_sheet.py
system/: controls.py  manual.py  manual_draws.py
tests/: conftest.py  test_config_consistency.py  test_engine.py  test_face.py  test_hand_orientation.py  test_hooks.py  test_hud_controls.py  test_main.py  test_options.py  test_poses.py  test_projectile_fire.py  test_projectiles.py  test_router.py  test_smoothing.py  test_sounds.py
vision/: camera.py  face_tracker.py  hand_tracker.py  landmarks.py
