[project]
name = "conjure"
version = "0.2.0"
description = "Real-time gesture-driven anime ability effects (Chidori, Kamehameha, Rasengan, ...)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "STERBAN0" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "opencv-python>=4.8",
    "mediapipe>=0.10.9",
    "pygame>=2.5",
    "numpy>=1.24",
    "sounddevice>=0.4.6",
    "pycaw>=20240210; platform_system == 'Windows'",
    "comtypes>=1.2; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "black>=23.0",
]

[project.urls]
Homepage = "https://github.com/STERBAN0/conjure"
Issues = "https://github.com/STERBAN0/conjure/issues"

[project.scripts]
conjure = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "unit: marks tests as unit tests (deselect with '-m \"not unit\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"
